Side menu will now collapse (bugs are still present)

--- a/maps/events/events.css
+++ b/maps/events/events.css
@@ -40,7 +40,7 @@ h2 {
   bottom: 10%;
   top: 10%;
   left: 2%;
-  width: 300px;
+  width: 250px;
   height: 80vh;
   border-radius: 15px;
 
@@ -65,7 +65,8 @@ h2 {
 }
 
 .sidemenu-nav a {
-  display: block;
+  display: flex;
+  align-items: center;
   padding: 12px 14px;
   margin-bottom: 8px;
 
@@ -98,9 +99,11 @@ h2 {
 
 .menu-toggle {
   cursor: pointer;
-  font-size: 1.5em;
-  padding: 10px;
-  border-radius: 8px;
+  font-size: 1.2em;
+  width: 18px;
+  display: flex;
+  align-items: center;
+  border-radius: 12px;
   color: var(--text-color);
 }
 
@@ -109,11 +112,39 @@ h2 {
 }
 
 .sidemenu.collapsed {
-  width: 70px;
+  width: auto;
 }
 
-.sidemenu.collapsed .sidemenu-nav a {
-  font-size: 0;
+.sidemenu.collapsed .sidemenu-nav a span {
+  display: none;
+}
+
+.sidemenu.collapsed .sidemenu-head h2 {
+  display: none;
+}
+
+.sidemenu.collapsed .sidemenu-head {
+  justify-content: center;
+  padding: 12px 0;
+}
+
+.sidemenu.collapsed .menu-toggle {
+  margin-right: 0;
+}
+
+/* .sidemenu.collapsed .sidemenu-nav a { */
+  /* justify-content: center; */
+  /* align-items: center;
+  padding: 12px; */
+/* } */
+
+.sidemenu.collapsed .sidemenu-nav a i {
+  margin-right: 0;
+}
+
+.sidemenu-nav a i {
+  width: 18px;
+  text-align: center;
 }
 
 @media (max-width: 47em) {
@@ -167,6 +198,7 @@ h2 {
   .sidemenu-nav a {
   background: var(--menu-item-bg);
   display: flex;
+  align-items: center;
 }
 
   .sidemenu-nav a:hover {
